[gd_scene load_steps=3 format=2]

[ext_resource path="res://dialogue_editor/utility/tag.gd" type="Script" id=1]
[ext_resource path="res://dialogue_editor/utility/reference_tree.gd" type="Script" id=2]

[node name="tag" type="PanelContainer"]
margin_right = 244.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="tag_container" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 237.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="button_divider" type="HSplitContainer" parent="tag_container"]
margin_right = 230.0
margin_bottom = 20.0
dragger_visibility = 2

[node name="label" type="Label" parent="tag_container/button_divider"]
margin_top = 3.0
margin_right = 63.0
margin_bottom = 17.0
text = "Tag Name"

[node name="button" type="Button" parent="tag_container/button_divider"]
margin_left = 194.0
margin_right = 230.0
margin_bottom = 20.0
size_flags_horizontal = 8
text = "Edit"

[node name="h_separator" type="HSeparator" parent="tag_container"]
margin_top = 24.0
margin_right = 230.0
margin_bottom = 28.0

[node name="reference_tree" type="Tree" parent="tag_container"]
margin_top = 32.0
margin_right = 230.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
hide_root = true
script = ExtResource( 2 )
